fix(index.html,style.css): Refactored CSS styles for improved readability and code reusability
Made significant changes to the CSS styles, including removing unnecessary code and simplifying some styles. Also, made adjustments to the layout and formatting of various elements throughout the site.

--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,11 @@ h5 {
 .section {
     width: 100%;
     display: flex;
+    height: max-content;
 }
 
-.section-content{
-    height: max-content;
+.section-content {
+
 
     justify-content: center;
     align-items: flex-start;
@@ -99,13 +100,11 @@ h5 {
     width: 85%;
 
 }
+
 .welcome {
-    /* background-image: url("../images/jack-sharp-ShCVvQbQBDk-unsplash.jpg"); */
-    /* background-size: 100% 100%; */
-    /* background-repeat: no-repeat; */
 
     background-color: #956052;
-    height: 50vh;
+
 
 
     color: #EEE;
@@ -115,11 +114,13 @@ h5 {
 
 .welcome-content {
     width: 85%;
+
     display: flex;
+
+    height: 50vh;
 
     justify-content: center;
     flex-direction: column;
-    border: 1px solid brown;
     gap: 10px;
 }
 
@@ -131,19 +132,9 @@ h5 {
 
 }
 
-.values {
-    border: 1px solid yellow;
-
-
-}
-
 .values-content {
-    display: flex;
-    flex-direction: column;
-
-    border: 4px solid red;
     align-items: center;
-    width: 85%;
+
 }
 
 
@@ -182,6 +173,8 @@ h5 {
     display: flex;
     flex-direction: column;
 
+    width: 85%;
+
     gap: 100px;
 }
 
@@ -218,14 +211,10 @@ h5 {
 
 .testimonials {
     flex-direction: column;
-    height: max-content;
 
     align-items: center;
-    width: 100%;
 
     background-color: #AEE0F1;
-
-
 
 
 }
@@ -265,18 +254,13 @@ h5 {
 
 /* TEAM STYLING  */
 .team {
-    width: 100%;
-    justify-content: center;
 
-    height: max-content;
+    justify-content: center;
 
 }
 
 .team-content {
 
-    border: 1px solid blue;
-
-    display: flex;
     align-items: center;
 
     gap: 10px;
@@ -319,8 +303,6 @@ h5 {
 /* WHATWEDO  */
 
 .whatwedo {
-    width: 100%;
-    height: max-content;
 
     justify-content: center;
 
@@ -328,8 +310,8 @@ h5 {
 }
 
 .whatwedo-content {
+
     align-items: center;
-    border: 1px solid red;
 }
 
 .whatwedo .description-container {
@@ -367,8 +349,6 @@ h5 {
 /* SUBSCRIBE  */
 
 .subscribe {
-    width: 100%;
-    height: max-content;
 
     justify-content: center;
 
@@ -378,7 +358,6 @@ h5 {
     height: 25vh;
     align-items: center;
 
-    border: 2px solid salmon;
 }
 
 .subscribe-content .form-input input {
@@ -406,13 +385,6 @@ h5 {
     margin-top: 5vh;
 }
 
-
-/* .message-body{
-    width: 200px;
-}
-.values-message-body {
-    /* width: 200px; */
-/* } */
 
 /* Media Queries Begin */
 
@@ -464,8 +436,8 @@ h5 {
 
 
 
-/* ANIMATION FOR WIDER SCREEN (DESKTOP + IPAD) */
-/* HOLD ON LET ME REFACTOR MY CSS STYLES TO IMPROVE READABILITY AND CODE RE-USABILITY, VERY IMPORTANT  */
+    /* ANIMATION FOR WIDER SCREEN (DESKTOP + IPAD) */
+    /* HOLD ON LET ME REFACTOR MY CSS STYLES TO IMPROVE READABILITY AND CODE RE-USABILITY, VERY IMPORTANT  */
 
 
 
